# tc-virus-checker

./: .gitignore  .pre-commit-config.yaml  .render-buildpacks.json  Aptfile  Dockerfile  Dockerfile.render  Makefile  Procfile  README.md  app.json  heroku.yml  pyproject.toml  render.yaml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  python-publish.yml
config/antivirus/: freshclam.conf
src/: Dockerfile  clamd.conf  requirements.txt  run.py
src/app/: logs.py  main.py  settings.py
tc_av/: Dockerfile  install.sh  requirements.txt  run.py
tc_av/app/: logs.py  main.py  settings.py
tests/: conftest.py  requirements.txt  test_main.py
tests/files/: clean_file  not_found_file
