[project]
name = "tc-virus-checker"
version = "0.1.0"
description = "FastAPI service that scans S3 objects with ClamAV"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.3",
    "uvicorn==0.44.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "boto3==1.42.90",
    "logfire[fastapi]==4.32.0",
    "sentry-sdk[fastapi]==2.57.0",
    "httpx==0.28.1",
]

[dependency-groups]
dev = [
    "ruff==0.15.10",
    "ty==0.0.24",
    "pre-commit==4.5.1",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-sugar==1.1.1",
    "coverage==7.13.5",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=native"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["src/run.py"]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "raise NotImplemented",
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src/"]
exclude = ["tests/", ".venv/", "__pycache__/"]

[tool.ty.analysis]
respect-type-ignore-comments = true
